y.output
   0  $accept : p $end

   1  p : d SEMICOLON p
   2    | d

   3  d : DEF IDENT LEFT args RIGHT ASSIGHN e

   4  args : IDENT COMMA args
   5       | IDENT

   6  e : LIT
   7    | IDENT
   8    | IF e op e THEN e ELSE e
   9    | FOR e DO e
  10    | DO e WHILE e
  11    | e PLUS e
  12    | e MINUS e
  13    | e MULT e
  14    | e DIV e
  15    | e REM e
  16    | IDENT LEFT r RIGHT

  17  r : e COMMA r
  18    | e

  19  op : EQUAL
  20     | GREATER
  21     | LESS
  22     | GREATEREQ
  23     | LESSEQ
  24     | NOT
  25     | REM

state 0
	$accept : . p $end  (0)

	DEF  shift 1
	.  error

	p  goto 2
	d  goto 3


state 1
	d : DEF . IDENT LEFT args RIGHT ASSIGHN e  (3)

	IDENT  shift 4
	.  error


state 2
	$accept : p . $end  (0)

	$end  accept


state 3
	p : d . SEMICOLON p  (1)
	p : d .  (2)

	SEMICOLON  shift 5
	$end  reduce 2


state 4
	d : DEF IDENT . LEFT args RIGHT ASSIGHN e  (3)

	LEFT  shift 6
	.  error


state 5
	p : d SEMICOLON . p  (1)

	DEF  shift 1
	.  error

	p  goto 7
	d  goto 3


state 6
	d : DEF IDENT LEFT . args RIGHT ASSIGHN e  (3)

	IDENT  shift 8
	.  error

	args  goto 9


state 7
	p : d SEMICOLON p .  (1)

	.  reduce 1


state 8
	args : IDENT . COMMA args  (4)
	args : IDENT .  (5)

	COMMA  shift 10
	RIGHT  reduce 5


state 9
	d : DEF IDENT LEFT args . RIGHT ASSIGHN e  (3)

	RIGHT  shift 11
	.  error


state 10
	args : IDENT COMMA . args  (4)

	IDENT  shift 8
	.  error

	args  goto 12


state 11
	d : DEF IDENT LEFT args RIGHT . ASSIGHN e  (3)

	ASSIGHN  shift 13
	.  error


state 12
	args : IDENT COMMA args .  (4)

	.  reduce 4


state 13
	d : DEF IDENT LEFT args RIGHT ASSIGHN . e  (3)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 19


state 14
	e : IF . e op e THEN e ELSE e  (8)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 20


state 15
	e : DO . e WHILE e  (10)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 21


state 16
	e : FOR . e DO e  (9)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 22


state 17
	e : IDENT .  (7)
	e : IDENT . LEFT r RIGHT  (16)

	LEFT  shift 23
	$end  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	WHILE  reduce 7
	DO  reduce 7
	RIGHT  reduce 7
	COMMA  reduce 7
	SEMICOLON  reduce 7
	PLUS  reduce 7
	MINUS  reduce 7
	MULT  reduce 7
	REM  reduce 7
	DIV  reduce 7
	EQUAL  reduce 7
	GREATER  reduce 7
	LESS  reduce 7
	LESSEQ  reduce 7
	GREATEREQ  reduce 7
	NOT  reduce 7


state 18
	e : LIT .  (6)

	.  reduce 6


state 19
	d : DEF IDENT LEFT args RIGHT ASSIGHN e .  (3)
	e : e . PLUS e  (11)
	e : e . MINUS e  (12)
	e : e . MULT e  (13)
	e : e . DIV e  (14)
	e : e . REM e  (15)

	PLUS  shift 24
	MINUS  shift 25
	MULT  shift 26
	REM  shift 27
	DIV  shift 28
	$end  reduce 3
	SEMICOLON  reduce 3


state 20
	e : IF e . op e THEN e ELSE e  (8)
	e : e . PLUS e  (11)
	e : e . MINUS e  (12)
	e : e . MULT e  (13)
	e : e . DIV e  (14)
	e : e . REM e  (15)

	PLUS  shift 24
	MINUS  shift 25
	MULT  shift 26
	REM  shift 29
	DIV  shift 28
	EQUAL  shift 30
	GREATER  shift 31
	LESS  shift 32
	LESSEQ  shift 33
	GREATEREQ  shift 34
	NOT  shift 35
	.  error

	op  goto 36


state 21
	e : DO e . WHILE e  (10)
	e : e . PLUS e  (11)
	e : e . MINUS e  (12)
	e : e . MULT e  (13)
	e : e . DIV e  (14)
	e : e . REM e  (15)

	WHILE  shift 37
	PLUS  shift 24
	MINUS  shift 25
	MULT  shift 26
	REM  shift 27
	DIV  shift 28
	.  error


state 22
	e : FOR e . DO e  (9)
	e : e . PLUS e  (11)
	e : e . MINUS e  (12)
	e : e . MULT e  (13)
	e : e . DIV e  (14)
	e : e . REM e  (15)

	DO  shift 38
	PLUS  shift 24
	MINUS  shift 25
	MULT  shift 26
	REM  shift 27
	DIV  shift 28
	.  error


state 23
	e : IDENT LEFT . r RIGHT  (16)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 39
	r  goto 40


state 24
	e : e PLUS . e  (11)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 41


state 25
	e : e MINUS . e  (12)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 42


state 26
	e : e MULT . e  (13)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 43


state 27
	e : e REM . e  (15)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 44


state 28
	e : e DIV . e  (14)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 45


29: shift/reduce conflict (shift 14, reduce 25) on IF
29: shift/reduce conflict (shift 15, reduce 25) on DO
29: shift/reduce conflict (shift 16, reduce 25) on FOR
29: shift/reduce conflict (shift 17, reduce 25) on IDENT
29: shift/reduce conflict (shift 18, reduce 25) on LIT
state 29
	e : e REM . e  (15)
	op : REM .  (25)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18

	e  goto 44


state 30
	op : EQUAL .  (19)

	.  reduce 19


state 31
	op : GREATER .  (20)

	.  reduce 20


state 32
	op : LESS .  (21)

	.  reduce 21


state 33
	op : LESSEQ .  (23)

	.  reduce 23


state 34
	op : GREATEREQ .  (22)

	.  reduce 22


state 35
	op : NOT .  (24)

	.  reduce 24


state 36
	e : IF e op . e THEN e ELSE e  (8)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 46


state 37
	e : DO e WHILE . e  (10)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 47


state 38
	e : FOR e DO . e  (9)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 48


state 39
	e : e . PLUS e  (11)
	e : e . MINUS e  (12)
	e : e . MULT e  (13)
	e : e . DIV e  (14)
	e : e . REM e  (15)
	r : e . COMMA r  (17)
	r : e .  (18)

	COMMA  shift 49
	PLUS  shift 24
	MINUS  shift 25
	MULT  shift 26
	REM  shift 27
	DIV  shift 28
	RIGHT  reduce 18


state 40
	e : IDENT LEFT r . RIGHT  (16)

	RIGHT  shift 50
	.  error


41: shift/reduce conflict (shift 26, reduce 11) on MULT
41: shift/reduce conflict (shift 27, reduce 11) on REM
41: shift/reduce conflict (shift 28, reduce 11) on DIV
state 41
	e : e . PLUS e  (11)
	e : e PLUS e .  (11)
	e : e . MINUS e  (12)
	e : e . MULT e  (13)
	e : e . DIV e  (14)
	e : e . REM e  (15)

	MULT  shift 26
	REM  shift 27
	DIV  shift 28
	$end  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	WHILE  reduce 11
	DO  reduce 11
	RIGHT  reduce 11
	COMMA  reduce 11
	SEMICOLON  reduce 11
	PLUS  reduce 11
	MINUS  reduce 11
	EQUAL  reduce 11
	GREATER  reduce 11
	LESS  reduce 11
	LESSEQ  reduce 11
	GREATEREQ  reduce 11
	NOT  reduce 11


42: shift/reduce conflict (shift 26, reduce 12) on MULT
42: shift/reduce conflict (shift 27, reduce 12) on REM
42: shift/reduce conflict (shift 28, reduce 12) on DIV
state 42
	e : e . PLUS e  (11)
	e : e . MINUS e  (12)
	e : e MINUS e .  (12)
	e : e . MULT e  (13)
	e : e . DIV e  (14)
	e : e . REM e  (15)

	MULT  shift 26
	REM  shift 27
	DIV  shift 28
	$end  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	WHILE  reduce 12
	DO  reduce 12
	RIGHT  reduce 12
	COMMA  reduce 12
	SEMICOLON  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12
	EQUAL  reduce 12
	GREATER  reduce 12
	LESS  reduce 12
	LESSEQ  reduce 12
	GREATEREQ  reduce 12
	NOT  reduce 12


43: shift/reduce conflict (shift 24, reduce 13) on PLUS
43: shift/reduce conflict (shift 25, reduce 13) on MINUS
43: shift/reduce conflict (shift 26, reduce 13) on MULT
43: shift/reduce conflict (shift 27, reduce 13) on REM
43: shift/reduce conflict (shift 28, reduce 13) on DIV
state 43
	e : e . PLUS e  (11)
	e : e . MINUS e  (12)
	e : e . MULT e  (13)
	e : e MULT e .  (13)
	e : e . DIV e  (14)
	e : e . REM e  (15)

	PLUS  shift 24
	MINUS  shift 25
	MULT  shift 26
	REM  shift 27
	DIV  shift 28
	$end  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	WHILE  reduce 13
	DO  reduce 13
	RIGHT  reduce 13
	COMMA  reduce 13
	SEMICOLON  reduce 13
	EQUAL  reduce 13
	GREATER  reduce 13
	LESS  reduce 13
	LESSEQ  reduce 13
	GREATEREQ  reduce 13
	NOT  reduce 13


44: shift/reduce conflict (shift 24, reduce 15) on PLUS
44: shift/reduce conflict (shift 25, reduce 15) on MINUS
44: shift/reduce conflict (shift 26, reduce 15) on MULT
44: shift/reduce conflict (shift 27, reduce 15) on REM
44: shift/reduce conflict (shift 28, reduce 15) on DIV
state 44
	e : e . PLUS e  (11)
	e : e . MINUS e  (12)
	e : e . MULT e  (13)
	e : e . DIV e  (14)
	e : e . REM e  (15)
	e : e REM e .  (15)

	PLUS  shift 24
	MINUS  shift 25
	MULT  shift 26
	REM  shift 27
	DIV  shift 28
	$end  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	WHILE  reduce 15
	DO  reduce 15
	RIGHT  reduce 15
	COMMA  reduce 15
	SEMICOLON  reduce 15
	EQUAL  reduce 15
	GREATER  reduce 15
	LESS  reduce 15
	LESSEQ  reduce 15
	GREATEREQ  reduce 15
	NOT  reduce 15


45: shift/reduce conflict (shift 24, reduce 14) on PLUS
45: shift/reduce conflict (shift 25, reduce 14) on MINUS
45: shift/reduce conflict (shift 26, reduce 14) on MULT
45: shift/reduce conflict (shift 27, reduce 14) on REM
45: shift/reduce conflict (shift 28, reduce 14) on DIV
state 45
	e : e . PLUS e  (11)
	e : e . MINUS e  (12)
	e : e . MULT e  (13)
	e : e . DIV e  (14)
	e : e DIV e .  (14)
	e : e . REM e  (15)

	PLUS  shift 24
	MINUS  shift 25
	MULT  shift 26
	REM  shift 27
	DIV  shift 28
	$end  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	WHILE  reduce 14
	DO  reduce 14
	RIGHT  reduce 14
	COMMA  reduce 14
	SEMICOLON  reduce 14
	EQUAL  reduce 14
	GREATER  reduce 14
	LESS  reduce 14
	LESSEQ  reduce 14
	GREATEREQ  reduce 14
	NOT  reduce 14


state 46
	e : IF e op e . THEN e ELSE e  (8)
	e : e . PLUS e  (11)
	e : e . MINUS e  (12)
	e : e . MULT e  (13)
	e : e . DIV e  (14)
	e : e . REM e  (15)

	THEN  shift 51
	PLUS  shift 24
	MINUS  shift 25
	MULT  shift 26
	REM  shift 27
	DIV  shift 28
	.  error


47: shift/reduce conflict (shift 24, reduce 10) on PLUS
47: shift/reduce conflict (shift 25, reduce 10) on MINUS
47: shift/reduce conflict (shift 26, reduce 10) on MULT
47: shift/reduce conflict (shift 27, reduce 10) on REM
47: shift/reduce conflict (shift 28, reduce 10) on DIV
state 47
	e : DO e WHILE e .  (10)
	e : e . PLUS e  (11)
	e : e . MINUS e  (12)
	e : e . MULT e  (13)
	e : e . DIV e  (14)
	e : e . REM e  (15)

	PLUS  shift 24
	MINUS  shift 25
	MULT  shift 26
	REM  shift 27
	DIV  shift 28
	$end  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	WHILE  reduce 10
	DO  reduce 10
	RIGHT  reduce 10
	COMMA  reduce 10
	SEMICOLON  reduce 10
	EQUAL  reduce 10
	GREATER  reduce 10
	LESS  reduce 10
	LESSEQ  reduce 10
	GREATEREQ  reduce 10
	NOT  reduce 10


48: shift/reduce conflict (shift 24, reduce 9) on PLUS
48: shift/reduce conflict (shift 25, reduce 9) on MINUS
48: shift/reduce conflict (shift 26, reduce 9) on MULT
48: shift/reduce conflict (shift 27, reduce 9) on REM
48: shift/reduce conflict (shift 28, reduce 9) on DIV
state 48
	e : FOR e DO e .  (9)
	e : e . PLUS e  (11)
	e : e . MINUS e  (12)
	e : e . MULT e  (13)
	e : e . DIV e  (14)
	e : e . REM e  (15)

	PLUS  shift 24
	MINUS  shift 25
	MULT  shift 26
	REM  shift 27
	DIV  shift 28
	$end  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	WHILE  reduce 9
	DO  reduce 9
	RIGHT  reduce 9
	COMMA  reduce 9
	SEMICOLON  reduce 9
	EQUAL  reduce 9
	GREATER  reduce 9
	LESS  reduce 9
	LESSEQ  reduce 9
	GREATEREQ  reduce 9
	NOT  reduce 9


state 49
	r : e COMMA . r  (17)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 39
	r  goto 52


state 50
	e : IDENT LEFT r RIGHT .  (16)

	.  reduce 16


state 51
	e : IF e op e THEN . e ELSE e  (8)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 53


state 52
	r : e COMMA r .  (17)

	.  reduce 17


state 53
	e : IF e op e THEN e . ELSE e  (8)
	e : e . PLUS e  (11)
	e : e . MINUS e  (12)
	e : e . MULT e  (13)
	e : e . DIV e  (14)
	e : e . REM e  (15)

	ELSE  shift 54
	PLUS  shift 24
	MINUS  shift 25
	MULT  shift 26
	REM  shift 27
	DIV  shift 28
	.  error


state 54
	e : IF e op e THEN e ELSE . e  (8)

	IF  shift 14
	DO  shift 15
	FOR  shift 16
	IDENT  shift 17
	LIT  shift 18
	.  error

	e  goto 55


55: shift/reduce conflict (shift 26, reduce 8) on MULT
55: shift/reduce conflict (shift 27, reduce 8) on REM
55: shift/reduce conflict (shift 28, reduce 8) on DIV
state 55
	e : IF e op e THEN e ELSE e .  (8)
	e : e . PLUS e  (11)
	e : e . MINUS e  (12)
	e : e . MULT e  (13)
	e : e . DIV e  (14)
	e : e . REM e  (15)

	MULT  shift 26
	REM  shift 27
	DIV  shift 28
	$end  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	WHILE  reduce 8
	DO  reduce 8
	RIGHT  reduce 8
	COMMA  reduce 8
	SEMICOLON  reduce 8
	PLUS  reduce 8
	MINUS  reduce 8
	EQUAL  reduce 8
	GREATER  reduce 8
	LESS  reduce 8
	LESSEQ  reduce 8
	GREATEREQ  reduce 8
	NOT  reduce 8


Rules never reduced:
	op : REM  (25)


State 29 contains 5 shift/reduce conflicts.
State 41 contains 3 shift/reduce conflicts.
State 42 contains 3 shift/reduce conflicts.
State 43 contains 5 shift/reduce conflicts.
State 44 contains 5 shift/reduce conflicts.
State 45 contains 5 shift/reduce conflicts.
State 47 contains 5 shift/reduce conflicts.
State 48 contains 5 shift/reduce conflicts.
State 55 contains 3 shift/reduce conflicts.


29 terminals, 7 nonterminals
26 grammar rules, 56 states
